<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/item_sort"
        app:showAsAction="ifRoom">

        <menu>

            <!--<item
                android:id="@+id/action_sort_by_name"
                android:goalTitle="@string/sort_by_name" />-->

            <item
                android:id="@+id/action_sort_by_eisenhower_matrix"
                android:title="@string/by_eisenhower_matrix" />

            <item
                android:id="@+id/action_sort_by_2_minutes_rules"
                android:title="@string/by_2_minutes_rules" />

            <item
                android:id="@+id/action_sort_by_eat_the_frog"
                android:title="@string/by_eat_the_frog" />

            <item
                android:id="@+id/action_sort_by_creator_sort"
                android:title="@string/creator_sort" />
        </menu>

    </item>

    <item
        android:id="@+id/action_hide_completed_tasks"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hide_late_tasks"
        android:checkable="true"
        android:title="@string/hide_late_tasks"
        app:showAsAction="never" />

</menu>