<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    android:label="Nav Graph"
    app:startDestination="@id/todayTasksFragment">

    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.tongtongstudio.ami.ui.edit.thingtodo.AddEditTaskFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_add_edit_task">
        <argument
            android:name="title"
            app:argType="string" />

        <argument
            android:name="thingToDo"
            android:defaultValue="@null"
            app:argType="com.tongtongstudio.ami.data.datatables.ThingToDo"
            app:nullable="true" />
        <argument
            android:name="parent_task"
            android:defaultValue="@null"
            app:argType="com.tongtongstudio.ami.data.datatables.Task"
            app:nullable="true" />
        <action
            android:id="@+id/action_addEditTaskFragment_to_editProjectLinkedDialogFragment"
            app:destination="@id/editProjectLinkedDialogFragment" />
        <action
            android:id="@+id/action_addEditTaskFragment_to_editBlockingTaskDialogFragment"
            app:destination="@id/editBlockingTaskDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/othersTasksFragment"
        android:name="com.tongtongstudio.ami.ui.otherstasks.LaterTasksFragment"
        android:label="@string/fragment_title_other_tasks"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_othersTasksFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
        <action
            android:id="@+id/action_othersTasksFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_othersTasksFragment_to_localProjectStatsFragment2"
            app:destination="@id/projectDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/todayTasksFragment"
        android:name="com.tongtongstudio.ami.ui.todaytasks.TodayTasksFragment"
        android:label="@string/first_fragment_title"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_todayTasksFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />

        <action
            android:id="@+id/action_todayTasksFragment_to_localProjectStatsFragment2"
            app:destination="@id/projectDetailsFragment" />
        <action
            android:id="@+id/action_todayTasksFragment_to_missedRecurringTasksDialogFragment"
            app:destination="@id/missedRecurringTasksDialogFragment" />
        <action
            android:id="@+id/action_todayTasksFragment_to_tabPageTrackingStats"
            app:destination="@id/viewPagerTrackingAndStatsFragment" />
        <!---->
        <action
            android:id="@+id/action_todayTasksFragment_to_draftsFragment"
            app:destination="@id/draftsFragment" />

    </fragment>
    <fragment
        android:id="@+id/projectFragment"
        android:name="com.tongtongstudio.ami.ui.projects.ProjectFragment"
        android:label="@string/menu_drawer_all_projects"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_projectFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />

        <action
            android:id="@+id/action_projectFragment_to_localProjectStatsFragment2"
            app:destination="@id/projectDetailsFragment" />
        <action
            android:id="@+id/action_projectFragment_to_tabPageTrackingStats"
            app:destination="@id/viewPagerTrackingAndStatsFragment" />
    </fragment>

    <fragment
        android:id="@+id/habitsFragment"
        android:name="com.tongtongstudio.ami.ui.habits.HabitsFragment"
        android:label="@string/fragment_title_habits"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_eventFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
        <action
            android:id="@+id/action_habitsFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/completedThingToDoFragment"
        android:name="com.tongtongstudio.ami.ui.completed.CompletedThingToDoFragment"
        android:label="@string/fragment_title_completed"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_completedThingToDoFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_completedThingToDoFragment_to_localProjectStatsFragment2"
            app:destination="@id/projectDetailsFragment" />
        <action
            android:id="@+id/action_completedThingToDoFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
    </fragment>

    <dialog
        android:id="@+id/recurringChoiceDialogFragment"
        android:name="com.tongtongstudio.ami.ui.dialog.recurring_task.EditRecurringDialogFragment"
        android:label="RecurringChoiceDialogFragment"
        tools:layout="@layout/dialog_set_repeating" />

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.tongtongstudio.ami.ui.monitoring.task.TaskDetailsFragment"
        android:label="@string/fragment_task_details_title"
        tools:layout="@layout/fragment_task_details">
        <argument
            android:name="task_id"
            app:argType="long" />
        <argument
            android:name="task_index"
            app:argType="long"
            android:defaultValue="-1L"/>
    </fragment>

    <fragment
        android:id="@+id/achievementsFragment"
        android:name="com.tongtongstudio.ami.ui.insights.InsightsFragment"
        android:label="@string/fragment_achievements_title"
        tools:layout="@layout/fragment_insights" />
    <fragment
        android:id="@+id/projectDetailsFragment"
        android:name="com.tongtongstudio.ami.ui.monitoring.project.ProjectDetailsFragment"
        android:label="@string/fragment_title_local_project_stats"
        tools:layout="@layout/fragment_project_details">
        <argument
            android:name="project_id"
            app:argType="long" />
        <action
            android:id="@+id/action_projectDetailsFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
        <action
            android:id="@+id/action_projectDetailsFragment_to_viewPagerTrackingAndStatsFragment"
            app:destination="@id/viewPagerTrackingAndStatsFragment" />
        <action
            android:id="@+id/action_projectDetailsFragment_self"
            app:destination="@id/projectDetailsFragment" />
    </fragment>
    <dialog
        android:id="@+id/estimatedTimeDialogFragment"
        android:name="com.tongtongstudio.ami.ui.dialog.TimePickerDialogFragment"
        android:label="EstimatedTimeDialogFragment"
        tools:layout="@layout/dialog_custom_time_picker" />
    <dialog
        android:id="@+id/missedRecurringTasksDialogFragment"
        android:name="com.tongtongstudio.ami.ui.dialog.MissedRecurringTasksDialogFragment"
        android:label="@string/recurring_tasks_missed"
        tools:layout="@layout/dialog_information_missed_recurring_tasks">
        <argument
            android:name="missedRecurringTasks"
            app:argType="com.tongtongstudio.ami.data.datatables.ThingToDo[]" />
    </dialog>
    <fragment
        android:id="@+id/viewPagerTrackingAndStatsFragment"
        android:name="com.tongtongstudio.ami.ui.monitoring.task.ViewPagerTrackingAndStatsFragment"
        android:label="@string/view_pager_screen_title"
        tools:layout="@layout/fragment_view_pager">

        <argument
            android:name="task_id"
            app:argType="long" />

        <argument
            android:name="task_index"
            app:argType="long"
            android:defaultValue="-1L"/>

        <argument
            android:name="fragment_pos"
            android:defaultValue="0"
            app:argType="integer" />

        <action
            android:id="@+id/action_viewPagerTrackingAndStatsFragment_to_addEditWorkSessionDialogFragment"
            app:destination="@id/addEditWorkSessionDialogFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>


    <fragment
        android:id="@+id/timeTrackerFragment"
        android:name="com.tongtongstudio.ami.ui.monitoring.task.TimeTrackerFragment"
        android:label="@string/fragment_title_chronometer"
        tools:layout="@layout/fragment_task_time_tracker">
        <argument
            android:name="task"
            app:argType="com.tongtongstudio.ami.data.datatables.Task" />
        <action
            android:id="@+id/action_timeTrackerFragment_to_addEditWorkSessionDialogFragment"
            app:destination="@id/addEditWorkSessionDialogFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/editGoalFragment"
        android:name="com.tongtongstudio.ami.ui.edit.goal.EditGoalFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_add_edit_goal">
        <argument
            android:name="global_goal"
            android:defaultValue="@null"
            app:argType="com.tongtongstudio.ami.data.datatables.Assessment"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/globalObjectivesFragment"
        android:name="com.tongtongstudio.ami.ui.goals.GlobalObjectivesFragment"
        android:label="@string/fragment_global_goals_title"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_globalObjectivesFragment_to_editGoalFragment"
            app:destination="@id/editGoalFragment" />
        <action
            android:id="@+id/action_globalObjectivesFragment_to_goalDetailsFragment"
            app:destination="@id/goalDetailsFragment" />
    </fragment>
    <dialog
        android:id="@+id/completeAssessmentDialogFragment"
        android:name="com.tongtongstudio.ami.ui.dialog.assessment.CompleteAssessmentDialogFragment"
        android:label="@string/complete_assessment_dialog_title"
        tools:layout="@layout/dialog_complete_assessment">
        <argument
            android:name="assessment"
            app:argType="com.tongtongstudio.ami.data.datatables.Assessment" />
    </dialog>
    <action
        android:id="@+id/action_global_completeAssessmentDialogFragment"
        app:destination="@id/completeAssessmentDialogFragment" />
    <fragment
        android:id="@+id/draftsFragment"
        android:name="com.tongtongstudio.ami.ui.drafts.DraftsFragment"
        android:label="@string/draft_fragment_title"
        tools:layout="@layout/fragment_drafts">
        <action
            android:id="@+id/action_draftsFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_draftsFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
        <action
            android:id="@+id/action_draftsFragment_to_projectDetailsFragment"
            app:destination="@id/projectDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/goalDetailsFragment"
        android:name="com.tongtongstudio.ami.ui.monitoring.goal.GoalDetailsFragment"
        android:label="@string/fragment_goal_details_title"
        tools:layout="@layout/fragment_goal_details">
        <argument
            android:name="goal"
            app:argType="com.tongtongstudio.ami.data.datatables.Assessment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.tongtongstudio.ami.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <dialog
        android:id="@+id/editProjectLinkedDialogFragment"
        android:name="com.tongtongstudio.ami.ui.dialog.parent_project.EditParentProjectDialogFragment"
        android:label="@string/edit_task_link"
        tools:layout="@layout/dialog_edit_linked_task">
        <argument
            android:name="currentTaskId"
            app:argType="long" />
        <argument
            android:name="parentProject"
            app:argType="com.tongtongstudio.ami.data.datatables.Task"
            app:nullable="true" />
    </dialog>
    <dialog
        android:id="@+id/editBlockingTaskDialogFragment"
        android:name="com.tongtongstudio.ami.ui.dialog.blocking_task.EditBlockingTaskDialogFragment"
        android:label="EditBlockingTaskDialogFragment"
        tools:layout="@layout/dialog_edit_linked_task">
        <argument
            android:name="blockingTask"
            android:defaultValue="@null"
            app:argType="com.tongtongstudio.ami.data.datatables.Task"
            app:nullable="true" />
        <argument
            android:name="taskId"
            app:argType="long" />
    </dialog>
    <dialog
        android:id="@+id/addEditWorkSessionDialogFragment"
        android:name="com.tongtongstudio.ami.ui.dialog.work_session.AddEditWorkSessionDialogFragment"
        android:label="AddEditWorkSessionDialogFragment"
        tools:layout="@layout/dialog_add_edit_work_session">
        <argument
            android:name="workSession"
            android:defaultValue="@null"
            app:argType="com.tongtongstudio.ami.data.datatables.WorkSession"
            app:nullable="true" />
    </dialog>

</navigation>